eks-hands-on/02-deploy-app/order-svc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-api-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service-api
  template:
    metadata:
      labels:
        app: order-service-api
    spec:
      containers:
      - name: order-service-api
        image: <your-account-id>.dkr.ecr.ap-northeast-2.amazonaws.com/order-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-api-svc
spec:
  selector:
    app: order-service-api
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
